--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -35,6 +35,9 @@
     <link href="css/holyday.css" rel="stylesheet" type="text/css">
     <link href="css/timeline.css" rel="stylesheet" type="text/css">
 
+    <!-- Biblehub style interlinear -->
+    <link href="css/newint.css" rel="stylesheet" type="text/css">
+
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="icon" type="image/png" href="favicon-large.png">
