--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,6 +30,7 @@
     <link href="css/calendars.css" rel="stylesheet" type="text/css">
     <link href="css/wizard.css" rel="stylesheet" type="text/css">
     <link href="css/gallery.css" rel="stylesheet" type="text/css">
+    <link href="css/mobile.css" rel="stylesheet" type="text/css" media="only screen and (max-width: 960px)">
 
     <!-- Digital D4 Biblical -->
     <link href="css/holyday.css" rel="stylesheet" type="text/css">
