--- a/src/main/js/html/calendar.html
+++ b/src/main/js/html/calendar.html
@@ -62,6 +62,11 @@
     </div>
     <ul class="message no-margin">
       <li>{{$ctrl.biblicalEvents.length}} Biblical events found</li>
+      <li>
+        <a href="https://dd4-biblical.appspot.com/_api/reports/v1/calendar/Enoch-Calendar-{{$ctrl.year}}.pdf">
+          Print <img src="images/icons/web-app/24/print.png" width="16" height="16" alt="Print">
+        </a>
+      </li>
       <li> Show:
         <input type="checkbox" data-ng-model="$ctrl.showBiblicalEvents"
                data-ng-change="$ctrl.setView('showBiblicalEvents')">Biblical Events
@@ -77,7 +82,7 @@
   <div data-ng-show="$ctrl.dialogShown=='SELECT_MONTH'" id="monthSelectModal" style="display:block; position:absolute; left:0px;" data-ng-style="$ctrl.dialogStyle">
     <div class="modal-window block-border">
       <ul class="action-tabs right">
-        <li><a href="" data-ng-click="$ctrl.closeDialog()" title="Close window">
+        <li><a  data-ng-click="$ctrl.closeDialog()" title="Close window">
           <img src="images/icons/fugue/cross-circle.png" width="16" height="16" alt="Close window">
         </a></li>
       </ul>
