More translation work, python thread processing and minor cleanup.

--- a/src/main/js/html/read_the_word.html
+++ b/src/main/js/html/read_the_word.html
@@ -321,8 +321,9 @@
         </div>
         <fieldset>
           <span data-ng-repeat="page in $ctrl.references.pages">
-            <button data-ng-click="$ctrl.showStrongsRefs(page)"
-                    data-ng-disabled="page == $ctrl.references.pageToken">{{page}}</button>
+            <button data-ng-click="$ctrl.showStrongsRefs(page)" data-ng-disabled="page == $ctrl.references.pageToken">
+              {{page}}
+            </button>
           </span>
         </fieldset>
         <div class="columns">
