--- a/src/main/js/html/scripture_selector.html
+++ b/src/main/js/html/scripture_selector.html
@@ -21,5 +21,6 @@
                 data-ng-click="$ctrl.setVerse($index + 1)">{{$index + 1}}</button>
       </div>
     </div>
+    <button class="float-left" data-ng-click="$ctrl.closeDialog()">Close</button>
   </div>
 </div>
