--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -81,6 +81,7 @@
       | <a href="#/lessons">Lessons</a>
       | <a href="#/timeline">Timeline</a>
       | <a href="#/games">Games</a>
+      | <a href="#/chat">AI Chat</a>
       <span data-ng-if="appCtrl.globalData.runningLocal">
         | <a href="#/utils">Utilities</a>
       </span>
